[gd_scene load_steps=21 format=3 uid="uid://yyb7kvgwss77"]

[ext_resource type="Script" path="res://Scenes/Scripts/Mines.gd" id="1_cuyi7"]
[ext_resource type="StyleBox" uid="uid://dcbwfc71h40fy" path="res://MISC/styles/minesBtnNormal.tres" id="2_wx71d"]
[ext_resource type="StyleBox" uid="uid://blv3y1m6cvdys" path="res://MISC/styles/mineBtnHover.tres" id="3_o3ryn"]
[ext_resource type="StyleBox" uid="uid://l1qntrid0ilt" path="res://MISC/styles/mineBtnDisabled.tres" id="4_krxku"]
[ext_resource type="StyleBox" uid="uid://dqmb2yav64yiu" path="res://MISC/styles/buttonNormal.tres" id="6_w1fwt"]
[ext_resource type="ButtonGroup" uid="uid://cvsn8ey11babs" path="res://MISC/styles/percentageBet.tres" id="7_ua0k7"]
[ext_resource type="StyleBox" uid="uid://cfmjdp4sjf233" path="res://MISC/styles/buttonPressed.tres" id="7_y8hln"]
[ext_resource type="Script" path="res://Scenes/UI/Score.gd" id="8_7l7ew"]
[ext_resource type="Script" path="res://Scenes/UI/leaderBoard.gd" id="8_jcp13"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c43cm"]
bg_color = Color(0.180392, 0.203922, 0.25098, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_detail = 11

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ieyy"]
bg_color = Color(0.262745, 0.298039, 0.368627, 1)
corner_radius_bottom_left = 43
corner_detail = 13

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fpcsn"]
bg_color = Color(0.215686, 0.219608, 0.219608, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.360784, 0.403922, 0.494118, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ibyy"]
bg_color = Color(0.231373, 0.258824, 0.321569, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cr8g2"]
bg_color = Color(0, 0.745098, 0.0980392, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 8
shadow_offset = Vector2(7.847, 6.65)
anti_aliasing_size = 0.718

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pn8mt"]
bg_color = Color(0, 0.803922, 0.109804, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 8
shadow_offset = Vector2(7.847, 6.65)
anti_aliasing_size = 0.718

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mms7f"]
bg_color = Color(0, 0.619608, 0.0745098, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 8
shadow_offset = Vector2(7.847, 6.65)
anti_aliasing_size = 0.718

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_elyya"]
bg_color = Color(0.121569, 0.12549, 0.12549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.360784, 0.403922, 0.494118, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 8
shadow_offset = Vector2(7.711, 6.199)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5p72y"]
bg_color = Color(0.219608, 0.227451, 0.227451, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.360784, 0.403922, 0.494118, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 5
shadow_offset = Vector2(3.603, 3.611)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_im3i8"]
bg_color = Color(0.258824, 0.262745, 0.262745, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.360784, 0.403922, 0.494118, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 5
shadow_offset = Vector2(4.682, 4.339)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6eq2k"]
bg_color = Color(0.219608, 0.227451, 0.227451, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.360784, 0.403922, 0.494118, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 5
shadow_offset = Vector2(4.682, 4.339)

[node name="Mines" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -6.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.012, 1.012)
script = ExtResource("1_cuyi7")

[node name="leftSidePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.000784929
anchor_top = -0.0222222
anchor_right = 0.99686
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_c43cm")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.21664
anchor_right = 1.0
anchor_bottom = 0.734722
offset_left = 1.52588e-05
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7ieyy")
metadata/_edit_use_anchors_ = true

[node name="LeaderBoard" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="projectPositionLabel" type="Label" parent="LeaderBoard"]
layout_mode = 0
offset_left = 18.5613
offset_top = 590.909
offset_right = 201.561
offset_bottom = 627.909
theme_override_colors/font_color = Color(0.584314, 0.631373, 0.721569, 1)
theme_override_font_sizes/font_size = 24
text = "Project Position"

[node name="LineEdit" type="LineEdit" parent="LeaderBoard"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0141287
anchor_top = 0.880556
anchor_right = 0.203297
anchor_bottom = 0.9625
offset_left = -0.213438
offset_top = -9.88147
offset_right = -0.21344
offset_bottom = -9.88147
focus_mode = 0
theme_override_colors/font_uneditable_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 37
theme_override_styles/read_only = ExtResource("6_w1fwt")
editable = false
caret_blink = true
caret_blink_interval = 0.5

[node name="leaderBoardLabel" type="Label" parent="LeaderBoard"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0141287
anchor_top = 0.323611
anchor_right = 0.16405
anchor_bottom = 0.383333
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.584314, 0.631373, 0.721569, 1)
theme_override_font_sizes/font_size = 29
text = "Leader Board"
metadata/_edit_use_anchors_ = true

[node name="leaderBoard" type="ScrollContainer" parent="LeaderBoard"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0141287
anchor_top = 0.380556
anchor_right = 0.207221
anchor_bottom = 0.827778
theme_override_styles/panel = SubResource("StyleBoxFlat_fpcsn")
script = ExtResource("8_jcp13")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="LeaderBoard/leaderBoard"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(435.411, 129.063)

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="1" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.327838
anchor_top = 0.119564
anchor_right = 0.409869
anchor_bottom = 0.265397
offset_bottom = -1.52588e-05
pivot_offset = Vector2(56.067, 50.485)
focus_mode = 0
theme_override_styles/normal = ExtResource("2_wx71d")
theme_override_styles/hover = ExtResource("3_o3ryn")
theme_override_styles/disabled = ExtResource("4_krxku")
theme_override_styles/focus = ExtResource("4_krxku")
metadata/_edit_use_anchors_ = true

[node name="2" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.429854
anchor_top = 0.121096
anchor_right = 0.511886
anchor_bottom = 0.266929
offset_bottom = 1.52588e-05
focus_mode = 0
theme_override_styles/normal = ExtResource("2_wx71d")
theme_override_styles/hover = ExtResource("3_o3ryn")
theme_override_styles/disabled = ExtResource("4_krxku")
theme_override_styles/focus = ExtResource("4_krxku")
metadata/_edit_use_anchors_ = true

[node name="3" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.535301
anchor_top = 0.121096
anchor_right = 0.617332
anchor_bottom = 0.266929
offset_bottom = 1.52588e-05
focus_mode = 0
theme_override_styles/normal = ExtResource("2_wx71d")
theme_override_styles/hover = ExtResource("3_o3ryn")
theme_override_styles/disabled = ExtResource("4_krxku")
theme_override_styles/focus = ExtResource("4_krxku")
metadata/_edit_use_anchors_ = true

[node name="4" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.641605
anchor_top = 0.121096
anchor_right = 0.723636
anchor_bottom = 0.266929
offset_bottom = 1.52588e-05
focus_mode = 0
theme_override_styles/normal = ExtResource("2_wx71d")
theme_override_styles/hover = ExtResource("3_o3ryn")
theme_override_styles/disabled = ExtResource("4_krxku")
theme_override_styles/focus = ExtResource("4_krxku")
metadata/_edit_use_anchors_ = true

[node name="5" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.747052
anchor_top = 0.121096
anchor_right = 0.829083
anchor_bottom = 0.266929
offset_bottom = 1.52588e-05
focus_mode = 0
theme_override_styles/normal = ExtResource("2_wx71d")
theme_override_styles/hover = ExtResource("3_o3ryn")
theme_override_styles/disabled = ExtResource("4_krxku")
theme_override_styles/focus = ExtResource("4_krxku")
metadata/_edit_use_anchors_ = true

[node name="6" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.747052
anchor_top = 0.304892
anchor_right = 0.829083
anchor_bottom = 0.450726
offset_top = -1.52588e-05
focus_mode = 0
theme_override_styles/normal = ExtResource("2_wx71d")
theme_override_styles/hover = ExtResource("3_o3ryn")
theme_override_styles/disabled = ExtResource("4_krxku")
theme_override_styles/focus = ExtResource("4_krxku")
metadata/_edit_use_anchors_ = true

[node name="7" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.641605
anchor_top = 0.304892
anchor_right = 0.723636
anchor_bottom = 0.450726
offset_top = -1.52588e-05
focus_mode = 0
theme_override_styles/normal = ExtResource("2_wx71d")
theme_override_styles/hover = ExtResource("3_o3ryn")
theme_override_styles/disabled = ExtResource("4_krxku")
theme_override_styles/focus = ExtResource("4_krxku")
metadata/_edit_use_anchors_ = true

[node name="8" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.533587
anchor_top = 0.304892
anchor_right = 0.615618
anchor_bottom = 0.450726
offset_top = -1.52588e-05
focus_mode = 0
theme_override_styles/normal = ExtResource("2_wx71d")
theme_override_styles/hover = ExtResource("3_o3ryn")
theme_override_styles/disabled = ExtResource("4_krxku")
theme_override_styles/focus = ExtResource("4_krxku")
metadata/_edit_use_anchors_ = true

[node name="9" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.429854
anchor_top = 0.304892
anchor_right = 0.511886
anchor_bottom = 0.450726
offset_top = -1.52588e-05
focus_mode = 0
theme_override_styles/normal = ExtResource("2_wx71d")
theme_override_styles/hover = ExtResource("3_o3ryn")
theme_override_styles/disabled = ExtResource("4_krxku")
theme_override_styles/focus = ExtResource("4_krxku")
metadata/_edit_use_anchors_ = true

[node name="10" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.327838
anchor_top = 0.304892
anchor_right = 0.409869
anchor_bottom = 0.450726
offset_top = -1.52588e-05
focus_mode = 0
theme_override_styles/normal = ExtResource("2_wx71d")
theme_override_styles/hover = ExtResource("3_o3ryn")
theme_override_styles/disabled = ExtResource("4_krxku")
theme_override_styles/focus = ExtResource("4_krxku")
metadata/_edit_use_anchors_ = true

[node name="11" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.747052
anchor_top = 0.49022
anchor_right = 0.829083
anchor_bottom = 0.636053
focus_mode = 0
theme_override_styles/normal = ExtResource("2_wx71d")
theme_override_styles/hover = ExtResource("3_o3ryn")
theme_override_styles/disabled = ExtResource("4_krxku")
theme_override_styles/focus = ExtResource("4_krxku")
metadata/_edit_use_anchors_ = true

[node name="12" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.641605
anchor_top = 0.49022
anchor_right = 0.723636
anchor_bottom = 0.636053
focus_mode = 0
theme_override_styles/normal = ExtResource("2_wx71d")
theme_override_styles/hover = ExtResource("3_o3ryn")
theme_override_styles/disabled = ExtResource("4_krxku")
theme_override_styles/focus = ExtResource("4_krxku")
metadata/_edit_use_anchors_ = true

[node name="13" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.533587
anchor_top = 0.49022
anchor_right = 0.615618
anchor_bottom = 0.636053
focus_mode = 0
theme_override_styles/normal = ExtResource("2_wx71d")
theme_override_styles/hover = ExtResource("3_o3ryn")
theme_override_styles/disabled = ExtResource("4_krxku")
theme_override_styles/focus = ExtResource("4_krxku")
metadata/_edit_use_anchors_ = true

[node name="14" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.429854
anchor_top = 0.49022
anchor_right = 0.511886
anchor_bottom = 0.636053
focus_mode = 0
theme_override_styles/normal = ExtResource("2_wx71d")
theme_override_styles/hover = ExtResource("3_o3ryn")
theme_override_styles/disabled = ExtResource("4_krxku")
theme_override_styles/focus = ExtResource("4_krxku")
metadata/_edit_use_anchors_ = true

[node name="15" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.327838
anchor_top = 0.49022
anchor_right = 0.409869
anchor_bottom = 0.636053
focus_mode = 0
theme_override_styles/normal = ExtResource("2_wx71d")
theme_override_styles/hover = ExtResource("3_o3ryn")
theme_override_styles/disabled = ExtResource("4_krxku")
theme_override_styles/focus = ExtResource("4_krxku")
metadata/_edit_use_anchors_ = true

[node name="bettingBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.229687
anchor_top = 0.754167
anchor_right = 0.942969
anchor_bottom = 0.927778
theme_override_styles/panel = SubResource("StyleBoxFlat_4ibyy")
metadata/_edit_use_anchors_ = true

[node name="BetButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.257813
anchor_top = 0.780556
anchor_right = 0.633594
anchor_bottom = 0.897222
pivot_offset = Vector2(359.293, -117.336)
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 54
theme_override_styles/normal = SubResource("StyleBoxFlat_cr8g2")
theme_override_styles/hover = SubResource("StyleBoxFlat_pn8mt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mms7f")
action_mode = 0
text = "Bett"
metadata/_edit_use_anchors_ = true

[node name="cashOut" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.68784
anchor_top = 0.789141
anchor_right = 0.903465
anchor_bottom = 0.894697
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_elyya")
text = "Cash Out"
metadata/_edit_use_anchors_ = true

[node name="BetLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0140625
anchor_top = 0.134722
anchor_right = 0.101975
anchor_bottom = 0.194444
offset_right = -26.4031
offset_bottom = -12.9998
theme_override_colors/font_color = Color(0.584314, 0.631373, 0.721569, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 29
text = "Amount"
metadata/_edit_use_anchors_ = true

[node name="Score" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0138958
anchor_top = 0.0645037
anchor_right = 0.173271
anchor_bottom = 0.114504
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_uneditable_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 23
theme_override_styles/normal = SubResource("StyleBoxFlat_5p72y")
theme_override_styles/focus = SubResource("StyleBoxFlat_5p72y")
theme_override_styles/read_only = SubResource("StyleBoxFlat_5p72y")
editable = false
selecting_enabled = false
script = ExtResource("8_7l7ew")
metadata/_edit_use_anchors_ = true

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0147368
anchor_top = 0.0150966
anchor_right = 0.0819242
anchor_bottom = 0.0748188
theme_override_colors/font_color = Color(0.584314, 0.631373, 0.721569, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 29
text = "Score"
metadata/_edit_use_anchors_ = true

[node name="loseDelay" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="mulitplayer" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.514914
anchor_top = 0.0180556
anchor_right = 0.618
anchor_bottom = 0.15
offset_right = -18.332
offset_bottom = -14.0
theme_override_font_sizes/font_size = 67
text = "1.0x"
metadata/_edit_use_anchors_ = true

[node name="goBack" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.943367
anchor_top = 0.00823452
anchor_right = 0.982527
anchor_bottom = 0.0760356
offset_right = 64.8756
offset_bottom = 63.1832
scale = Vector2(0.435864, 0.435864)
focus_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="goBack"]
modulate = Color(1, 1, 1, 0.580392)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -78.5
offset_right = 54.0
offset_bottom = 166.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.63999)
theme_override_font_sizes/font_size = 149
text = "x"
metadata/_edit_use_anchors_ = true

[node name="BetAmount" type="LineEdit" parent="."]
layout_mode = 0
anchor_left = 0.0140625
anchor_top = 0.190278
anchor_right = 0.172656
anchor_bottom = 0.238889
offset_bottom = 7.62939e-05
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = ExtResource("6_w1fwt")
theme_override_styles/focus = ExtResource("6_w1fwt")
theme_override_styles/read_only = ExtResource("6_w1fwt")
metadata/_edit_use_anchors_ = true

[node name="PercentageButtonContainer" type="HBoxContainer" parent="BetAmount"]
layout_mode = 0
anchor_left = 0.00492611
anchor_top = 1.28571
anchor_right = 1.00985
anchor_bottom = 2.25714
offset_right = 1.52588e-05
theme_override_constants/separation = 8
metadata/_edit_use_anchors_ = true

[node name="halfButton" type="Button" parent="BetAmount/PercentageButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_styles/normal = ExtResource("6_w1fwt")
theme_override_styles/hover = SubResource("StyleBoxFlat_im3i8")
theme_override_styles/pressed = ExtResource("7_y8hln")
theme_override_styles/disabled = ExtResource("6_w1fwt")
theme_override_styles/focus = SubResource("StyleBoxFlat_6eq2k")
toggle_mode = true
button_group = ExtResource("7_ua0k7")
text = "1/2"

[node name="threeFourthButton" type="Button" parent="BetAmount/PercentageButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_styles/normal = ExtResource("6_w1fwt")
theme_override_styles/hover = SubResource("StyleBoxFlat_im3i8")
theme_override_styles/pressed = ExtResource("7_y8hln")
theme_override_styles/disabled = ExtResource("6_w1fwt")
toggle_mode = true
button_group = ExtResource("7_ua0k7")
text = "3/4"

[node name="allButton" type="Button" parent="BetAmount/PercentageButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_styles/normal = ExtResource("6_w1fwt")
theme_override_styles/hover = SubResource("StyleBoxFlat_im3i8")
theme_override_styles/pressed = ExtResource("7_y8hln")
theme_override_styles/disabled = ExtResource("6_w1fwt")
toggle_mode = true
button_group = ExtResource("7_ua0k7")
text = "All"

[connection signal="pressed" from="1" to="." method="_on_buttonPressed" binds= ["1"]]
[connection signal="pressed" from="2" to="." method="_on_buttonPressed" binds= ["2"]]
[connection signal="pressed" from="3" to="." method="_on_buttonPressed" binds= ["3"]]
[connection signal="pressed" from="4" to="." method="_on_buttonPressed" binds= ["4"]]
[connection signal="pressed" from="5" to="." method="_on_buttonPressed" binds= ["5"]]
[connection signal="pressed" from="6" to="." method="_on_buttonPressed" binds= ["6"]]
[connection signal="pressed" from="7" to="." method="_on_buttonPressed" binds= ["7"]]
[connection signal="pressed" from="8" to="." method="_on_buttonPressed" binds= ["8"]]
[connection signal="pressed" from="9" to="." method="_on_buttonPressed" binds= ["9"]]
[connection signal="pressed" from="10" to="." method="_on_buttonPressed" binds= ["10"]]
[connection signal="pressed" from="11" to="." method="_on_buttonPressed" binds= ["11"]]
[connection signal="pressed" from="12" to="." method="_on_buttonPressed" binds= ["12"]]
[connection signal="pressed" from="13" to="." method="_on_buttonPressed" binds= ["13"]]
[connection signal="pressed" from="14" to="." method="_on_buttonPressed" binds= ["14"]]
[connection signal="pressed" from="15" to="." method="_on_buttonPressed" binds= ["15"]]
[connection signal="pressed" from="BetButton" to="." method="_on_bet_button_pressed"]
[connection signal="pressed" from="cashOut" to="." method="_on_cash_out_pressed"]
[connection signal="timeout" from="loseDelay" to="." method="_on_lose_delay_timeout"]
[connection signal="pressed" from="goBack" to="." method="_on_go_back_pressed"]
[connection signal="text_changed" from="BetAmount" to="." method="_on_bet_amount_text_changed"]
[connection signal="pressed" from="BetAmount/PercentageButtonContainer/halfButton" to="." method="betAmountButtonPressed" binds= [0.5]]
[connection signal="pressed" from="BetAmount/PercentageButtonContainer/threeFourthButton" to="." method="betAmountButtonPressed" binds= [0.75]]
[connection signal="pressed" from="BetAmount/PercentageButtonContainer/allButton" to="." method="betAmountButtonPressed" binds= [1.0]]
